--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@popperjs/core": "^2.11.8",
+    "@stimulus-components/dialog": "^1.0.1",
     "@stimulus-components/reveal": "^5.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
