broadcast answer updates

--- a/.erb_lint.yml
+++ b/.erb_lint.yml
@@ -21,6 +21,8 @@ linters:
         Enabled: false
       Layout/ArgumentAlignment:
         Enabled: false
+      Layout/FirstArgumentIndentation:
+        Enabled: false
       Layout/InitialIndentation:
         Enabled: false
       Layout/LineLength:
