--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "app",
   "private": true,
   "devDependencies": {
+    "@herb-tools/linter": "^0.7.5",
     "esbuild": "^0.24.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps"
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
+    "herb:lint": "herb-lint"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
