make corrections to the questions

--- a/config/loaded_questions/questions.yml
+++ b/config/loaded_questions/questions.yml
@@ -219,7 +219,7 @@ shared:
 - Why do some people not get along with you?
 - What would be a strange phobia?
 - Who makes the greatest 'thing' in the world?
-- What is your favorite kind of chocolate bars?
+- What is your favorite kind of chocolate bar?
 - What is the biggest inconvenience about the place you are currently living in?
 - Where would be an interesting, original place for a first date?
 - Who is definitely not normal?
@@ -228,7 +228,7 @@ shared:
 - If you were granted one wish, what would you wish for?
 - What one word do you associate with reggae music?
 - Whose music do they play most often in elevators?
-- What is something you do everyday?
+- What is something you do every day?
 - How could you make $1 million right now?
 - What is the most gruesome form of death?
 - Who is your favorite comedian?
@@ -247,11 +247,6 @@ shared:
 - What is your favorite Girl Scouts cookie?
 - What makes you uncomfortable?
 - If you had to sing the National Anthem, who would you want joining you on vocals?
-- 'What is the #1 reason you would join the military?'
-- Where is a terrible place to spend your birthday?
-- What useful thing did you learn recently?
-- If you had to sing the national anthem who would you want joining you on vocals
-  ?
 - What is the number one reason you would join the military?
 - Where is a terrible place to spend your birthday?
 - What useful thing did you learn recently?
@@ -259,7 +254,7 @@ shared:
 - What animal would look funny with lipstick?
 - What is a strange reason to celebrate?
 - What is one thing you have never done on the Internet?
-- What is a sure sign that someone thinks they are " too cool"?
+- What is a sure sign that someone thinks they are "too cool"?
 - If you opened up a present, what would you least expect to find?
 - What sport should cease to exist?
 - What is your biggest superstition?
@@ -282,7 +277,7 @@ shared:
 - If you had to dispose of a dead body, how would you do it?
 - Write down the name of a fictional sitcom and the names of two players who fill
   the leading roles.
-- What Car is way too obnoxious to drive?
+- What car is way too obnoxious to drive?
 - What is the best present you have received in the past six months?
 - If you could see any musician, live or dead, perform their final concert, who would
   it be?
@@ -313,7 +308,7 @@ shared:
   in office?
 - Who should be this year's person of the year?
 - What sports team could you never see yourself rooting for?
-- What part of the world do you yearn to travel?
+- What part of the world do you yearn to travel to?
 - If you could add one event to the extreme games, what would it be?
 - What is the most useless piece of trivia you can think of?
 - What athlete excites you most?
@@ -368,7 +363,7 @@ shared:
 - If you had a tattoo, where would it be and what would it be?
 - What is your favorite thing about the beach?
 - How has your body changed in the last five years?
-- Do you have a place where you like to go and think?If so, where?
+- Do you have a place where you like to go and think? If so, where?
 - When is it not OK to laugh out loud?
 - What would you not want crawling around your house?
 - What is the best thing about marriage?
@@ -384,8 +379,6 @@ shared:
 - If you knew a nuclear war would begin in two hours, what would you do?
 - What is the nicest feature of the person on your left?
 - Where is the farthest place in the world?
-- What one song would you choose to come out to before world class champion 6 Oh my
-  gosh
 - What one song would you choose to come out to before a world class championship
   boxing match?
 - If you wanted to be a real turn off on a first date what would you do?
@@ -464,7 +457,7 @@ shared:
 - What one person or thing best represents the 1980s?
 - What will you be doing 10 years from today?
 - If you were a bartender, what drink would you fix yourself right now?
-- What is too evil for words?(It's okay to write it down)
+- What is too evil for words? (It's okay to write it down)
 - What is your favorite activity in a park?
 - What keeps you up at night?
 - If you were forced to kill one person living today, at your discretion, who would
@@ -546,7 +539,7 @@ shared:
 - What have you seen that nobody else has seen?
 - If you could inspect one thing under a microscope, what would it be?
 - What would be a great name for a typical, but fictional, action movie?
-- What comedians humor is not appreciated by everyone?
+- What comedian's humor is not appreciated by everyone?
 - What is one thing at which you are a natural?
 - If you could live during a specific time in American history, when would you choose?
 - What celebrity has no right being a celebrity?
@@ -557,7 +550,7 @@ shared:
 - Where would be a terrible place to find yourself tomorrow?
 - What are your two favorite ice cream toppings?
 - What language would you like to master?
-- If you had a siamese twin, who would you want it to be?
+- If you had a Siamese twin, who would you want it to be?
 - Whose whereabouts would you like to know of?
 - What is the most useless major in college?
 - What candy are you most likely to have in a bowl on your coffee table?
@@ -612,7 +605,7 @@ shared:
 - What do you get enthusiastic about?
 - If you had to bet your life on one prediction, what would you predict?
 - What one thing do you doubt can be found on other planets?
-- What movie stars success can only be attributed to their looks?
+- What movie star's success can only be attributed to their looks?
 - What television show have you surprisingly never seen?
 - If you had to pick, which of the seven dwarfs is most like you?
 - What pampering act is a complete waste of time and money?
@@ -697,7 +690,7 @@ shared:
 - What are your nightmares generally about?
 - What do you think will be the next popular catch phrase?
 - What is the first thing that comes to your mind when you think of politicians?
-- What do you do everyday?
+- What do you do every day?
 - What is the most important/amazing thing ever done by one of your ancestors?
 - If 50 people in your age group were selected randomly, how many do you think you
   would find leading a happier life than yours?
@@ -880,7 +873,7 @@ shared:
 - What would be an unusual way to settle a feud?
 - What excites certain people but completely bores you?
 - If you could be godfather/ godmother to any non relative, who would it be?
-- Who can you not believe gotta talk show?
+- Who can you not believe got a talk show?
 - Who is your favorite Muppet?
 - Why would someone describe you as lazy?
 - If you could look up any word in the dictionary, what would you choose?
@@ -963,7 +956,7 @@ shared:
 - What is the biggest advantage of being royalty?
 - What one word best describes your teeth?
 - What stock would you pick as a sure winner over the next two months?
-- Write down the name of anyone player and what you think is his/ her ideal job.
+- Write down the name of any one player and what you think is his/ her ideal job.
 - What is your favorite kind of bagel?
 - What is one thing that always puts a smile on your face?
 - If you had a sandwich named after you, what would be the ingredients?
@@ -1034,7 +1027,7 @@ shared:
 - What is your favorite museum?
 - Where would you not go back to for a vacation?
 - Who is one person that could potentially lose every game of tic-tac-toe?
-- What jeopardy category would you be good at?
+- What Jeopardy category would you be good at?
 - What is the greatest Christmas movie ever?
 - How do you like to relax?
 - If you were to add one room to your house, what would it be?
@@ -1047,13 +1040,13 @@ shared:
 - What event/ decision is proof that you have grown up?
 - What would seriously tick you off?
 - What gets increasingly difficult with age?
-- What is the Best Song you don't currently have in your music collection?
+- What is the best song you don't currently have in your music collection?
 - Given your body, what is one thing you could never do?
 - If you could own one type of store, what would it be?
 - What do you waste your time doing?
 - What is your favorite part of the newspaper?
 - What two things are you allergic to?
-- What is one thing you would have to pay for with a credit card ?
+- What is one thing you would have to pay for with a credit card?
 - What TV show have you been meaning to record?
 - What is the best thing about living alone?
 - What opportunity did you miss out on?
@@ -1096,7 +1089,6 @@ shared:
 - If you had a personalized license plate, what would it say?
 - What word do you associate with the mafia?
 - Who is your favorite television lawyer?
-- What is one risk you are not willing to take?
 - If your picture showed up on an America's Most Wanted list, what crime would you
   have committed?
 - What sport should be in the Olympics?
@@ -1149,7 +1141,7 @@ shared:
 - If you were to match wits with someone, who would likely beat you?
 - What is the most exciting thing you can imagine happening in your life?
 - What is your favorite Dr. Seuss book?
-- What celebrities life savings probably resembles yours?
+- What celebrity's life savings probably resembles yours?
 - If you could be a famous actor, writer, athlete, artist or musician, which would
   you choose?
 - What is the worst occupation in the world?
