--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,33 @@ updates:
 - package-ecosystem: bundler
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
+  allow:
+  - dependency-type: "all"
+  groups:
+    ruby-deps:
+      patterns:
+      - "*"
   open-pull-requests-limit: 10
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
+  allow:
+  - dependency-type: "all"
+  groups:
+    github-actions-deps:
+      patterns:
+      - "*"
+  open-pull-requests-limit: 10
+- package-ecosystem: npm
+  directory: "/"
+  schedule:
+    interval: weekly
+  allow:
+  - dependency-type: "all"
+  groups:
+    yarn-deps:
+      patterns:
+      - "*"
   open-pull-requests-limit: 10
