--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -6,7 +6,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionmailer
@@ -14,7 +14,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -22,7 +22,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actiontext
@@ -30,7 +30,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -38,7 +38,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -46,7 +46,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -54,7 +54,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -62,7 +62,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -70,7 +70,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -78,7 +78,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: addressable
@@ -86,7 +86,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: base64
@@ -94,23 +94,27 @@ gems:
   source:
     type: rubygems
 - name: bigdecimal
-  version: '3.1'
+  version: '4.0'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: cgi
-  version: '0'
+  version: '0.5'
   source:
-    type: stdlib
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: concurrent-ruby
   version: '1.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: connection_pool
@@ -118,7 +122,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: date
@@ -146,7 +150,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: i18n
@@ -154,7 +158,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: io-console
@@ -174,7 +178,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: marcel
@@ -182,7 +186,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: mini_mime
@@ -190,7 +194,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
@@ -198,7 +202,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: monitor
@@ -214,7 +218,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: nokogiri
@@ -222,14 +226,10 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: openssl
-  version: '0'
-  source:
-    type: stdlib
-- name: pathname
   version: '0'
   source:
     type: stdlib
@@ -241,12 +241,16 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: prism
+  version: 1.7.0
+  source:
+    type: rubygems
 - name: rack
   version: '2.2'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -254,7 +258,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-html-sanitizer
@@ -262,7 +266,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -270,7 +274,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rake
@@ -278,7 +282,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rdoc
@@ -290,7 +294,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -298,7 +302,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: securerandom
@@ -318,7 +322,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: stringio
@@ -334,7 +338,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: time
@@ -354,7 +358,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: e2d1e1c865213341c75bb98685d7dc5f2741583b
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: uri
